# whoami

./: .gitignore  LICENSE  README.md  README_CN.md  pack.py
.codebuddy/plans/: whoami-mvp-plan_2fe37ae3.md
.codebuddy/rules/: project-rule.mdc
backend/: .env.example  pyproject.toml  start.sh
backend/app/: config.py  database.py  deps.py  main.py
backend/app/models/: __init__.py  api_key.py  store_token.py  user.py
backend/app/routers/: auth.py  cos.py  keys.py  profile.py  store_api.py  web_profile.py
backend/app/services/: auth_service.py  cos_service.py  key_service.py  store_token_service.py  sts_service.py
doc/: market_report_20260303.md  mp-article.md
frontend/: logo_generate.sh  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: app.vue
frontend/app/assets/css/: main.css
frontend/app/components/: AccessKeyCard.vue  ApiKeyCard.vue  ConfirmDialog.vue  CopyBlock.vue  LanguageSwitcher.vue  OAuthButtons.vue  ProfileDialog.vue  ThemeSwitcher.vue
frontend/app/components/home/: FeaturesSection.vue  FlowAnimation.vue  (+3 more)
frontend/app/composables/: useApi.ts  useAuth.ts  useRequest.ts  useTheme.ts  useTracking.ts
frontend/app/layouts/: default.vue
frontend/app/middleware/: auth.ts
frontend/app/pages/: dashboard.vue  index.vue  login.vue  privacy.vue  terms.vue
frontend/locales/: en.json  zh.json
frontend/public/: robots.txt
frontend/public/.well-known/: microsoft-identity-association.json
frontend/server/middleware/: redirects.ts
skills/whoami/: SKILL.md
skills/whoami/references/: profile_format.md
(+1 files in other folders)
